# password_manager_rs

./: Cargo.toml  README.md
src/: main.rs  password_database.rs
